--- a/src/components/issue/slider-section/index.css
+++ b/src/components/issue/slider-section/index.css
@@ -30,6 +30,10 @@
   border-radius: 12px;
 
   position: relative;
+
+  -webkit-user-select: all;
+  -ms-user-select: all;
+  user-select: all;
 }
 
 #issue #reader .slider-section .slider-fill {
@@ -58,6 +62,8 @@
   cursor: grab;
   cursor: -moz-grab;
   cursor: -webkit-grab;
+
+  touch-action: none;
 }
 
 #issue #reader .slider-section .slider-circle:active {
